# rust-space

./: .gitignore  Cargo.toml  Readme.md  foo.txt  readme.md
data/: components.json  space_inputs.fbs  space_outputs.fbs
docs/: TODO.md
examples/: game.rs
godot-space/: SpaceApi.gdextension  SpaceApi.gdextension.uid  SpaceGame.gdextension  control_gallery.tscn  controller.gd  gui.tscn  icon.svg.import  main.tscn  main_gui.tscn  project.godot  sector_view.tscn
godot-space/data/: new_resource.tres
godot-space/gfx/: icon_circle.kra  icon_circle.png.import  icon_circle_full.kra  icon_circle_full.png.import  icon_quad.kra  icon_quad.kra~  icon_quad.png.import  select.png.import  select.png~
godot-space/scenes/: main.tscn  main_gui.tscn  main_stub.tscn  sector_view.tscn
godot-space/scenes/main_gui/: main_gui.tscn
godot-space/scenes/sector_view/: cursor_building.tscn  generic_marker.tscn  generic_orbit.tscn  sector_view.tscn  sector_view_labels.tres  selected_cursor.tscn
godot-space/scenes/tests/: test_main_gui.tscn  test_viewport_camera.gd  test_viewports.tscn  test_viewports_camera.tscn
godot-space/src/: controller.gd  controller.gd.uid  game_api_stub.gd
godot-space/src/api/: game_api_stub.gd  game_api_stub.gd.uid  obj_info_provider.gd  obj_info_provider.gd.uid
godot-space/src/data/: prefabs_list.gd  prefabs_list.gd.uid
godot-space/src/editor/: sector_view_test_data.gd  sector_view_test_data.gd.uid
godot-space/src/gui/: show_selected.gd
godot-space/src/main_gui/: gui_popup.gd  gui_popup.gd.uid  main_gui.gd  main_gui.gd.uid  obj_info_provider.gd  shipyard_orders_popup.gd  shipyard_orders_popup.gd.uid  show_selected.gd  show_selected.gd.uid
godot-space/src/sector_view/: camera_pan.gd  (+16 more)
godot-space/tests/: test_draw.gd  test_ui.tscn  test_ui_2.tscn  test_ui_3.tscn
mono/: Program.cs  mono.csproj  mono.sln
mono/Properties/: AssemblyInfo.cs
python/: test1.py
rust/: .gitignore  Cargo.toml  Makefile  readme.md
rust-space/: Cargo.toml
rust-space/space-lib/: Cargo.toml
rust-space/space-main/: Cargo.toml
rust/commons/: Cargo.toml
rust/commons/src/: fs.rs  grid.rs  hocon.rs  lib.rs  math.rs  prob.rs  random_grid.rs  recti.rs  tree.rs  v2i.rs
rust/data/: game.conf  ship_components.conf  system_generator.conf
rust/docs/: forum.md  todo.md
rust/domain-b/: Cargo.toml
rust/space-2d-gui/: Cargo.toml
rust/space-2d-gui/examples/: generate_system_2d.rs  steering_in_2d.rs  system_generator.rs
rust/space-2d-gui/src/: lib.rs  main.rs  system_generator.rs
rust/space-cdylib/: Cargo.toml
rust/space-console/: Cargo.toml
rust/space-domain/: .gitignore  Cargo.toml
rust/space-domain-macros/: Cargo.toml
rust/space-domain-macros/src/: lib.rs
rust/space-domain-macros/tests/: test_loadsave.rs
rust/space-domain/examples/: test_specs.rs
rust/space-domain/src/: ffi.rs  game.rs  game_api.rs  game_ffi.rs  lib.rs  local_game.rs  space_inputs_generated.rs  space_outputs_generated.rs  specs_extras.rs  test.rs  test_combat.rs  utils.rs
rust/space-domain/src/app/: mod.rs
rust/space-domain/src/ffi/: ffi_output_system.rs  mod.rs
rust/space-domain/src/game/: actions.rs  ai_high.rs  astrobody.rs  bevy_utils.rs  blueprint.rs  building_site.rs  code.rs  commands.rs  conf.rs  data.rs  dock.rs  docking.rs  events.rs  extractables.rs  factory.rs  fleets.rs  game.rs  jsons.rs  label.rs  loader.rs  locations.rs  mod.rs  navigation.rs  navigations.rs  new_obj.rs  objects.rs  orbit.rs  order.rs  prefab.rs  production_cost.rs  save.rs  save_manager.rs  sceneries.rs  scenery_random.rs  sectors.rs  ship.rs  shipyard.rs  station.rs  template.rs  utils.rs  (+2 more)
rust/space-domain/src/game/actions/: action_dock_system.rs  action_extract.rs  action_extract_system.rs  action_jump_system.rs  action_move_to_system.rs  action_progress_system.rs  action_request_handler_system.rs  action_undock_system.rs  actions_system.rs  executor_action_dockundock.rs  executor_action_fly.rs  executor_action_jump.rs  executor_action_mine.rs
rust/space-domain/src/game/commands/: command_mine_system.rs  command_trader_system.rs  executor_command_idle.rs  executor_command_mine.rs
rust/space-domain/src/game/locations/: index_per_sector_system.rs
rust/space-domain/src/game/navigations/: nav_request_handler_system.rs  navigation_request_handler_system.rs  navigation_system.rs  request_handler_system.rs
rust/space-domain/src/game/ship/: damages.rs  ship_combat.rs  ship_internals.rs
rust/space-domain/tests/: acceptance_tests.rs  domain_tests.rs
rust/space-domain/tests/prototypes/: ai_high.rs  factory.rs
rust/space-ffi/: Cargo.toml
rust/space-flap/: Cargo.toml  build.rs  readme.md
rust/space-flap/generated_dotnet/: ffi_domain_2.cs  ffi_domain_2.csproj
rust/space-flap/src/: glue.rs.in  lib.rs  models.rs  utils.rs
rust/space-galaxy/: Cargo.toml
rust/space-galaxy/src/: galaxy_generator.rs  lib.rs  system_generator.rs  terrain_generator.rs
rust/space-godot/: Cargo.toml
rust/space-godot/src/: events.rs  game_api.rs  game_api_runtime.rs  godot_utils.rs  graphics.rs  lib.rs  main_gui.rs  runtime.rs  sector_view.rs  state.rs  utils.rs
rust/space-godot/src/game_api/: label_info.rs  obj_info.rs  shipyard_info.rs  ware_amount_info.rs
rust/space-internal/: Cargo.toml
rust/space-lib/: Cargo.toml
rust/space-macros/: Cargo.toml
rust/space-main/: Cargo.toml
rust/space-rltk/: Cargo.toml
scripts/: build.sh  check-save-diff.sh  flat-build.sh  open-unity-editor.sh  run-godot-restart.sh  run-godot.sh  run-godot4-restart.sh  run-godot4.sh  run-python.sh  run.sh  watch-godot.sh  watch-godot4.sh
src/: bin.rs  exp.rs  game.rs  lib.rs  local_game.rs  log.rs  main.rs  test_combat.rs  utils.rs  utils_macros.rs
src/game/: action.rs  actions.rs  ai.rs  command.rs  commands.rs  docking.rs  executor_command_idle.rs  executor_command_mine.rs  extractables.rs  jsons.rs  locations.rs  navigation.rs  new_obj.rs  objects.rs  save.rs  sectors.rs  ship.rs  ship_combat.rs  ship_internals.rs  template.rs  wares.rs
unity-space/: .gitignore
unity-space/ProjectSettings/: ProjectSettings.asset
(+158 files in other folders)
