[package]
name = "commons"
version = "0.1.0"
authors = []
edition = "2021"

[lib]

[dependencies]
serde_json = "1.*"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
hocon= "0.9.0"
approx = "0.5.1"
glam =  { version = "0.24", features = ["mint", "serde", "approx"] }
