[package]
name = "space-2d-gui"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workaround fail to draw o new rust version
ggez = { git = 'https://github.com/ggez/ggez.git', branch = "devel"  }
mint = "0.5"
approx = "0.3.2"
egui  = "0.16"
# workaround fail to draw o new rust version
ggegui = { git= 'https://github.com/sisso/ggegui.git' }

env_logger = "0.7"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

hocon="0.3.4"

commons = { version = "*", path = "../commons" }
#space-domain = { version = "*", path = "../space-domain" }
space-flap = { version = "*", path = "../space-flap" }

glam =  { version = "0.23.0", features = ["mint", "serde", "approx"] }
