[package]
name = "space-2d-gui"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workaround fail to draw o new rust version
ggez = "0.9.1"
mint = "0.5"
approx = "0.3.2"
egui  = "0.16"
# workaround fail to draw o new rust version
ggegui = "0.3.8"

env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

hocon="0.9"

commons = { version = "*", path = "../commons" }
#space-domain = { version = "*", path = "../space-domain" }
space-flap = { version = "*", path = "../space-flap" }

