[package]
name = "space-cdylib"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="space"
crate-type = ["cdylib"]

[dependencies]
libc = "*"
space-lib = { version = "*", path = "../space-lib" }
