[package]
name = "space-domain-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
bevy_ecs = {version = "0.12.1"}
serde_json = { verison="1.*" }
serde = {version = "1.*", features = ["derive"]}
quote = { version = "1.0.33", features = [] }
syn = { version = "2.0.39", features = [] }

[dev-dependencies]
log="0.4.*"
env_logger= "0.10.1"
