[package]
name = "space-domain"
version = "0.1.0"
authors = []
edition = "2018"

[lib]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
flatbuffers = "22.9"
commons = { version = "*", path = "../commons" }
space-galaxy = {version = "*", path = "../space-galaxy" }
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"
rayon-core="1.9.1"
pathfinding = "2.2.2"
itertools = "0.10"
log="0.4.*"
env_logger="0.9.*"
nalgebra = { version = "0.27.1", features = ["mint"] }
approx = "0.5.1"