[package]
name = "space-domain"
version = "0.1.0"
authors = []
edition = "2021"

[lib]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
commons = { version = "*", path = "../commons" }
space-galaxy = {version = "*", path = "../space-galaxy" }
specs = { version = "0.20.0", features = ["serde", "specs-derive", "shred-derive"] }
rayon-core="1.9.1"
pathfinding = "2.2.2"
itertools = "0.10"
log="0.4.*"
env_logger="0.9.*"
approx = "0.5.1"