[package]
name = "space-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
commons = { version = "*", path = "../commons" }
space-galaxy = {version = "*", path = "../space-galaxy" }
bevy_ecs = {version = "0.12.1"}
pathfinding = "2.2.2"
itertools = "0.10"
log="0.4.*"
env_logger="0.9.*"
approx = "0.5.1"
