[package]
name = "space-flap"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_flap"
crate-type = ["cdylib", "rlib"]

[dependencies]
space-domain = { version = "*", path = "../space-domain" }
commons = { version = "*", path = "../commons" }
specs = { version = "0.20.0", features = ["serde", "specs-derive", "shred-derive"] }
env_logger = "0.7"
log = "0.4"
itertools = "0.10.3"

[build-dependencies]
flapigen = { git="https://github.com/sisso/flapigen-rs.git", version="0.6.0-pre8", branch="dotnet-pr" }
env_logger = "0.7"
log = "0.4"
