[package]
name = "space-flap"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_flap"
crate-type = ["cdylib", "rlib"]

[dependencies]
space-domain = { version = "*", path = "../space-domain" }
commons = { version = "*", path = "../commons" }
env_logger = "0.8"
log = "0.4"
itertools = "0.10"
bevy_ecs = {version = "0.12.1"}
