[package]
name = "space-galaxy"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
commons = { version = "*", path = "../commons" }
hocon="0.3.4"
log = "0.4.16"
