[package]
name = "space-godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

mint = "0.5"
glam =  { version = "0.23.0", features = ["mint", "serde", "approx"] }
approx = "0.3.2"
rand = "0.8.4"

env_logger = "0.7"
log = "0.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

commons = { version = "*", path = "../commons" }
space-flap = { version = "*", path = "../space-flap"}