[package]
name = "space-godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "8ad9cb0ea877ccf7d4f34b17d87f0a1eb7c47f56" }
commons = { version = "*", path = "../commons" }
space-domain = { version = "*", path = "../space-domain" }
bevy_ecs = { version = "0.12.1" }
mint = "0.5"
glam = { version = "0.23.0", features = ["mint", "serde", "approx"] }
approx = "0.5.1"
rand = "0.8.4"
itertools = "0.10"
env_logger = "0.10.0"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
